--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="https://github.com/jspellman814">github.com/jspellman814</a></li>
+        		<li><a href="https://github.com/jspellman814">Visit GitHub</a></li>
 			</ul>
 		</footer>
 	</body>
