Adding stylesheet, Gulp (for compiling), .gitignore file

--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>John Spellman, Web Developer</title>
-	</head>
-	<body>
-		<div class="container">
-    		<div class="intro">
-        		<h1>John Spellman</h1>
-        		<p>Web developer</p>
-				</div><!-- /.intro -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="https://github.com/jspellman814">Visit GitHub</a></li>
-			</ul>
-		</footer>
-	</body>
+<head>
+    <title>John Spellman, Web Developer</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+<div class="container">
+    <div class="intro">
+        <h1>John Spellman</h1>
+        <p>Web developer</p>
+        <ul>
+            <li><a href="https://github.com/jspellman814">Visit GitHub</a></li>
+        </ul>
+    </div><!-- /.intro -->
+</div><!-- /.container -->
+<footer>
+</footer>
+</body>
 </html>
