--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <p>Web developer</p>
         <ul>
             <li><a href="https://github.com/jspellman814">Visit GitHub</a></li>
+            <li><a href="https://profiles.wordpress.org/jspellman">Visit WordPress.org profile</a></li>
         </ul>
     </div><!-- /.intro -->
 </div><!-- /.container -->
