--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <h1>John Spellman</h1>
         <p>Web developer</p>
         <ul>
-            <li><a href="https://www.linkedin.com/in/john-spellman-86039262/">Visit LinkedIn</a></li>
-            <li><a href="https://github.com/jspellman814">Visit GitHub</a></li>
-            <li><a href="https://profiles.wordpress.org/jspellman">Visit WordPress.org profile</a></li>
+            <li><a href="https://www.linkedin.com/in/john-spellman-86039262/" target="_blank">Visit LinkedIn</a></li>
+            <li><a href="https://github.com/jspellman814 target="_blank"">Visit GitHub</a></li>
+            <li><a href="https://profiles.wordpress.org/jspellman" target="_blank">Visit WordPress.org profile</a></li>
         </ul>
     </div><!-- /.intro -->
 </div><!-- /.container -->
