--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>John Spellman, Web Developer</title>
+    <title>John Spellman, Software Engineer</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 <div class="container">
     <div class="intro">
         <h1>John Spellman</h1>
-        <p>Web developer</p>
+        <p>Software Engineer</p>
         <ul>
             <li><a href="https://www.linkedin.com/in/john-spellman-86039262/" target="_blank">Visit LinkedIn</a></li>
             <li><a href="https://github.com/jspellman814" target="_blank"">Visit GitHub</a></li>
